Fixed scrollbars on page load

--- a/vue/style.css
+++ b/vue/style.css
@@ -6,6 +6,6 @@ body {
 }
 
 #app {
-  min-height: 100%;
-  min-width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
